# prism

./: .clang-format  .flatpakignore  .gitignore  Makefile  README  README.md  io.github.kamilprusko.Prism.json  meson.build  meson_options.txt  wscript
data/: io.github.kamilprusko.Prism.desktop  io.github.kamilprusko.Prism.metainfo.xml  meson.build  wscript
data/materials/: beam.xml.in  glass.xml.in  ground.xml.in  text.xml.in  torch.xml.in  wscript
data/objects/: wscript
data/shaders/: beam.frag.glsl  beam.vert.glsl  glass.frag.glsl  glass.inl  glass.vert.glsl  glass_vtk.inl  wscript
data/textures/: wscript
src/: beamActor.cpp  beamActor.h  labelActor.cpp  labelActor.h  main.cpp  main.h  materials.cpp  materials.h  meson.build  prismActor.cpp  prismActor.h  ray-tracer.cpp  ray-tracer.h  rayTracer.cpp  rayTracer.h  scene.cpp  scene.h  torch.cpp  torch.h  torchMovedCallback.cpp  torchMovedCallback.h  torchWidget.cpp  torchWidget.h  utils.cpp  utils.h  wscript
