install_subdir(
  'shaders',
  install_dir: join_paths(package_datadir, 'shaders'),
  strip_directory: true,
)
install_subdir(
  'textures',
  install_dir: join_paths(package_datadir, 'textures'),
  strip_directory: true,
)
install_subdir(
  'objects',
  install_dir: join_paths(package_datadir, 'objects'),
  strip_directory: true,
)

install_data(
  'io.github.kamilprusko.Prism.desktop',
  install_dir: join_paths(get_option('datadir'), 'applications'),
)
install_data(
  'io.github.kamilprusko.Prism.metainfo.xml',
  install_dir: join_paths(get_option('datadir'), 'metainfo'),
)
